<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/activator_result" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            style="?android:attr/progressBarStyleLarge"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            android:id="@+id/ivQR"/>

        <TextView
            android:id="@+id/tvDeviceSuccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activator_success_devices"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSuccessResult"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvDeviceFail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activator_error_devices"
            android:layout_marginTop="10dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvFailResult"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:visibility="gone"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
